--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "natural": "^5.1.13",
     "node-fetch": "^2.6.0",
     "node-html-parser": "^1.2.21",
+    "plaid": "^10.4.0",
     "puppeteer": "^5.2.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
